Fixed border-focus state-label shift thing
Added a transparent border to inputs to prevent shifting.

Also, changed the order of the link tags.

Already re-submitted the project! Hopefully y'all will see these changes too.

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ label {
 .contact-info input, 
 select, 
 textarea {
-    border: none; 
+    border: 1px solid transparent; 
     width: 100%;
     border-radius: 5px;
     background-color: #ececec;
